--- a/devops-agent/Dockerfile.agent
+++ b/devops-agent/Dockerfile.agent
@@ -4,7 +4,11 @@ WORKDIR /app
 
 RUN pip install --no-cache-dir requests psycopg2-binary pgvector httpx
 
-COPY src/ /app/src/
+# install local SDK
+COPY deploy/repos/talos-sdk-py /tmp/talos-sdk-py
+RUN pip install /tmp/talos-sdk-py
+
+COPY deploy/repos/talos-examples/devops-agent/src/ /app/src/
 
 ENV PYTHONPATH=/app
 
