--- a/devops-agent/Dockerfile.talos
+++ b/devops-agent/Dockerfile.talos
@@ -2,27 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY deploy/repos/talos-examples/devops-agent/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# We need to copy the talos_node package. 
-# Since context is root, we copy from deploy/repos/...
-# But wait, docker-compose context is root.
-# Let's simplify and assume we copy the local directory into /app/talos_node
-# and run from there.
+# install local SDK
+COPY deploy/repos/talos-sdk-py /tmp/talos-sdk-py
+RUN pip install /tmp/talos-sdk-py
 
-# Actually, let's just copy the specific file we just wrote.
-# The `docker-compose.yml` context is `../../../..` (Root of repo).
-# But the file is in `deploy/repos/talos-examples/devops-agent/talos_node/main.py`.
-# This is getting complicated with paths.
-# Let's change context in docker-compose to header, or rely on explicit copy paths.
-
-# ADJUSTMENT: We will assume the build context is the `devops-agent` directory for simplicity
-# and change docker-compose to use `context: .` and copy files locally.
-# The user's prompt said "talos-node: standalone Talos Docker container".
-# Ideally it should be a reusable image, but for this repo example, local build is fine.
-
-COPY talos_node/ /app/talos_node/
+COPY deploy/repos/talos-examples/devops-agent/talos_node/ /app/talos_node/
 
 # Install dependencies (fastapi uvicorn httpx)
 RUN pip install fastapi uvicorn httpx
