--- a/devops-agent/Dockerfile.tools
+++ b/devops-agent/Dockerfile.tools
@@ -6,9 +6,12 @@ WORKDIR /app
 # we need boto3, fastapi, uvicorn, requests
 RUN pip install --no-cache-dir boto3 fastapi uvicorn requests httpx
 
+# install local SDK
+COPY deploy/repos/talos-sdk-py /tmp/talos-sdk-py
+RUN pip install /tmp/talos-sdk-py
+
 # Copy the mcp_tools package
-# Context is . (devops-agent directory)
-COPY mcp_tools/ /app/mcp_tools/
+COPY deploy/repos/talos-examples/devops-agent/mcp_tools/ /app/mcp_tools/
 
 ENV PYTHONPATH=/app
 
