--- a/devops-agent/Dockerfile.agent
+++ b/devops-agent/Dockerfile.agent
@@ -5,10 +5,9 @@ WORKDIR /app
 RUN pip install --no-cache-dir requests psycopg2-binary pgvector httpx
 
 # install local SDK
-COPY deploy/repos/talos-sdk-py /tmp/talos-sdk-py
-RUN pip install /tmp/talos-sdk-py
-
-COPY deploy/repos/talos-examples/devops-agent/src/ /app/src/
+# install local SDK (staged by demo.sh)
+COPY . /app
+RUN pip install /app/vendor/talos-sdk-py
 
 ENV PYTHONPATH=/app
 
