--- a/devops-agent/Dockerfile.talos
+++ b/devops-agent/Dockerfile.talos
@@ -2,16 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY deploy/repos/talos-examples/devops-agent/requirements.txt .
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# install local SDK
-COPY deploy/repos/talos-sdk-py /tmp/talos-sdk-py
-RUN pip install /tmp/talos-sdk-py
-
-COPY deploy/repos/talos-examples/devops-agent/talos_node/ /app/talos_node/
-
-# Install dependencies (fastapi uvicorn httpx)
-RUN pip install fastapi uvicorn httpx
+COPY . /app
+COPY . /app
+RUN pip install /app/vendor/talos-sdk-py && \
+    pip install fastapi uvicorn httpx
 
 CMD ["uvicorn", "talos_node.main:app", "--host", "0.0.0.0", "--port", "8000"]
